--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Jurno Performance Test SvelteKit</title>
+		<meta name="description" content="This is a performance test page for Jurno.id built with SvelteKit">
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
