--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel=preconnect href="https://files.jurno.id">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
